# dd_SecureCollaborationQ

./: CMakeLists.txt  README.md
include/: SecureCollaborationQ.cpp  SecureCollaborationQ.h
test/: main.cpp
